<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createLabel"
        android:id="@+id/btnCreateContact"
        android:layout_marginTop="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editLabel"
        android:id="@+id/btnEditContact"
        android:layout_below="@+id/btnCreateContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteLabel"
        android:id="@+id/btnDelete"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/btnEditContact"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/displayLabel"
        android:id="@+id/btnDisplay"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/btnDelete"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finishLabel"
        android:id="@+id/btnFinish"
        android:layout_below="@+id/btnDisplay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

</RelativeLayout>
