<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.will.contactsdirectory.EditContact">

    <Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/SelectContactLabel" />

    <EditText
        android:id="@+id/phoneNumberText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextField"
        android:layout_centerHorizontal="true"
        android:hint="@string/phoneNumberHint"
        android:inputType="phone"
        android:maxLength="@integer/maxPhoneNumberInt"
        android:phoneNumber="false" />

    <EditText
        android:id="@+id/nameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_button"
        android:layout_centerHorizontal="true"
        android:hint="@string/nameHintLabel" />

    <EditText
        android:id="@+id/emailAddressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumberText"
        android:layout_centerHorizontal="true"
        android:hint="@string/emailHintLabel"
        android:inputType="textEmailAddress" />

    <ImageView
        android:id="@+id/editImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/emailAddressText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:clickable="true"
        android:contextClickable="false"
        android:src="@drawable/avadefault" />


    <Button
        android:id="@+id/btnEditDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="38dp"
        android:text="@string/saveButtonLabel" />

    <Button
        android:id="@+id/btnEditCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/emailAddressText"
        android:layout_alignRight="@+id/emailAddressText"
        android:layout_alignTop="@+id/btnEditDel"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:text="@string/cancelButtonLabel" />
</RelativeLayout>
